--- a/css/compasscards.css
+++ b/css/compasscards.css
@@ -3,6 +3,30 @@ h1{
     width: 100%;
 }
 
+.card-menu {
+    width: 100%;
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+}
+
+.card-menu li {
+    width: 20%;
+    border: 2px solid;
+    text-align: center;
+}
+
+.card-menu li a {
+    display: block;
+    text-decoration: none;
+    color: #000000;
+    padding: 5px 0;
+}
+
+.card-menu li a:hover {
+    background: #aaaaaa;
+}
+
 .cards{
     width: 100%;
 }
