--- a/css/compasscharacter.css
+++ b/css/compasscharacter.css
@@ -1,17 +1,21 @@
 .character{
-    width: 21%;
+    width: 23%;
     display: flex;
-    align-items: center;
+    align-items: top;
     justify-content: center;
-    margin: 2%;
+    text-align: center;
+    margin: 1%;
+    background: #ff8808;
 }
 
 .character a{
     text-decoration: none;
+    color: #000000;
+    font-size: 10px;
 }
 
 .character a:hover{
-    background: #aaaaaa;
+    background: #ff7708;
 }
 
 .character img{
