--- a/css/compasscharacter.css
+++ b/css/compasscharacter.css
@@ -1,5 +1,6 @@
 h1{
     width: 100%;
+    height: 32px;
 }
 
 hr{
@@ -8,6 +9,7 @@ hr{
 
 .show-button{
     width: 100%;
+    height: 30px;
 }
 
 .show-button p{
@@ -21,6 +23,7 @@ hr{
     color: white;
     border: 4px solid #46435b;
     border-radius: 2px;
+    margin: 1px auto;
 }
 
 #character-f{
@@ -35,14 +38,13 @@ hr{
 }
 
 #character-menu{
-    width: 90%;
-    height: 90%;
+    width: 60%;
     background-color: #ffffff;
     border: none;
     box-shadow: 0 2px 6px #cccccc;
     border-radius: 10px;
     display: flex;
-    margin: auto 5%;
+    margin: auto 20%;
     flex-wrap: wrap;
 }
 
@@ -66,14 +68,14 @@ hr{
     align-items: center;
     justify-content: space-around;
     flex-wrap: nowrap;
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-#cancel{
-    width: 15%;
-    background-color: #000000;
+.character-menu button{
+    width: 100%;
+    background-color: #70707080;
     color: white;
-    border: 4px solid #444444;
+    border: 4px solid #94949480;
     border-radius: 2px;
 }
 
@@ -83,6 +85,12 @@ hr{
     color: white;
     border: 4px solid #9b5305;
     border-radius: 2px;
+}
+
+.characters{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .character{
