--- a/css/compasscharacter.css
+++ b/css/compasscharacter.css
@@ -44,7 +44,7 @@ hr{
     box-shadow: 0 2px 6px #cccccc;
     border-radius: 10px;
     display: flex;
-    margin: auto 20%;
+    margin: auto 20% ;
     flex-wrap: wrap;
 }
 
@@ -116,4 +116,10 @@ hr{
 
 .character img{
     width: 100%;
+}
+
+@media (max-width: 520px) {
+    .character a{
+        font-size: 15px;
+    }
 }
