--- a/css/copmassnav.css
+++ b/css/copmassnav.css
@@ -3,8 +3,7 @@ body {
 }
 
 .logo {
-    width: 150px;
-    height: 54px;
+    width: 100%;
 }
 
 .menu_link {
@@ -37,8 +36,12 @@ body {
     top: 0;
 }
 
+.menu_f a{
+    width: 15%;
+}
+
 .menu {
-    width: 90%;
+    width: 75%;
     text-align: center;
     margin-left: 20%;
 }
@@ -49,7 +52,6 @@ nav {
     left: 0;
     z-index: 999999;
     width: 100%;
-    height: 55px;
     border-bottom: 1px solid #ccc;
     background-color: #ffffff;
     padding: 10px;
@@ -59,14 +61,28 @@ nav {
     width: 100%;
 }
 
-@media (max-width:1024px){
+@media (max-width:1200px){
     .menu{
-        margin-left: 0;
+        margin-left: 5%;
     }
 }
 
-@media (max-width:768px){
+@media (max-width:1000px){
     .menu{
         display: none;
+    }
+
+    .menu_f {
+        justify-content: center;
+    }
+
+    .menu_f a{
+        width: auto;
+        height: 80px;
+    }
+
+    .logo{
+        width: auto;
+        height:100%;
     }
 }
