--- a/css/compasscharacter.css
+++ b/css/compasscharacter.css
@@ -118,6 +118,12 @@ hr{
     width: 100%;
 }
 
+@media screen and (max-device-width:768px){
+    .character a{
+        font-size: 35px;
+    }
+}
+
 @media (max-width: 520px) {
     .character a{
         font-size: 15px;
