--- a/css/compasscharacter.css
+++ b/css/compasscharacter.css
@@ -33,6 +33,7 @@ hr{
     display: none;
     position: fixed;
     top: 0;
+    left: 0;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.8);
 }
