--- a/css/compasscharacter.css
+++ b/css/compasscharacter.css
@@ -51,6 +51,7 @@ hr{
     width: 90%;
     text-align: center;
     margin: 20px 5%;
+    overflow: auto;
 }
 
 .character-menu .role{
@@ -76,6 +77,7 @@ hr{
     color: white;
     border: 4px solid #94949480;
     border-radius: 2px;
+    text-align: center;
 }
 
 #OK{
@@ -127,12 +129,12 @@ hr{
     }
 
     .character-menu button{
-        height: 50px;
+        height:75px;
         font-size: 20px;
-        margin: 5%;
     }
 
     #OK{
+        width: 40%;
         font-size: 60px;
     }
 
