--- a/css/character.css
+++ b/css/character.css
@@ -1,3 +1,66 @@
 h1{
     width: 100%;
 }
+
+.hero-photo{
+    width: 100%;
+}
+
+.data{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.data-name{
+    width: 40%;
+    text-align: right;
+    font-size: 20px;
+    padding-right: 5px;
+}
+
+.data-bg{
+    width:60%;
+    background-color: #414141;
+    border: 2px solid #7c7c7c;
+}
+
+.atk{
+    width: 100%;
+    display: flex;
+    float: left;
+    margin-top: 20px;
+}
+
+.atk-data{
+    width: calc((100% / 1.5) * 1);
+    font-size: 20px;
+    background-color: #ff6a00;
+}
+
+.def{
+    width: 100%;
+    display: flex;
+    float: left;
+    margin-top: 20px;
+}
+
+.def-data{
+    width: calc((100% / 1.5) * 1);
+    font-size: 20px;
+    background-color: #ff6a00;
+}
+
+.hp{
+    width: 100%;
+    display: flex;
+    float: left;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.hp-data{
+    width: calc((100% / 1.5) * 1);
+    font-size: 20px;
+    background-color: #ff6a00;
+}
