--- a/css/character.css
+++ b/css/character.css
@@ -10,12 +10,17 @@ h1{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    background-color: #dddddd;
+}
+
+.data-icon{
+    height: 30px;
 }
 
 .data-name{
-    width: 40%;
+    width: 25%;
     text-align: right;
-    font-size: 20px;
+    font-size: 30px;
     padding-right: 5px;
 }
 
@@ -33,8 +38,7 @@ h1{
 }
 
 .atk-data{
-    width: calc((100% / 1.5) * 1);
-    font-size: 20px;
+    font-size: 30px;
     background-color: #ff6a00;
 }
 
@@ -46,8 +50,7 @@ h1{
 }
 
 .def-data{
-    width: calc((100% / 1.5) * 1);
-    font-size: 20px;
+    font-size: 30px;
     background-color: #ff6a00;
 }
 
@@ -59,8 +62,9 @@ h1{
     margin-bottom: 20px;
 }
 
+
+
 .hp-data{
-    width: calc((100% / 1.5) * 1);
-    font-size: 20px;
+    font-size: 30px;
     background-color: #ff6a00;
 }
