--- a/css/character.css
+++ b/css/character.css
@@ -38,6 +38,7 @@ h1{
 }
 
 .atk-data{
+    height: 100%;
     font-size: 30px;
     background-color: #ff6a00;
 }
@@ -50,6 +51,7 @@ h1{
 }
 
 .def-data{
+    height: 100%;
     font-size: 30px;
     background-color: #ff6a00;
 }
@@ -65,6 +67,7 @@ h1{
 
 
 .hp-data{
+    height: 100%;
     font-size: 30px;
     background-color: #ff6a00;
 }
