--- a/css/nav.css
+++ b/css/nav.css
@@ -2,42 +2,57 @@ body {
     background-color: #dddddd;
 }
 
-.logo {
+h1{
+    display: block;
     width: 100%;
+    font-size: 40px;
+    font-family: 'Microsoft JhengHei';
+    margin: 0 0 10px 0;
+    padding-bottom: 10px;
+    border-bottom: 10px double #000000;
+}
+
+.logo {
+    height: 100%;
 }
 
 .menu_link {
+    width: 100%;
     color: #000000;
     text-decoration: none;
-    padding: 10% 30%;
+    font-size: 25px;
+    font-weight: bolder;
 }
 
-.menu_link:hover {
+.menu_item:hover {
     background: #aaaaaa;
 }
 
 .menu_list {
+    height: 100%;
     list-style: none;
     display: flex;
     align-items: center;
     padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .menu_item {
     width: 30%;
-    display: block;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-items: center;
 }
 
 .menu_f {
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
     top: 0;
-}
-
-.menu_f a{
-    width: 15%;
 }
 
 .menu {
@@ -47,6 +62,7 @@ body {
 }
 
 nav {
+    height: 80px;
     position: fixed;
     top: 0;
     left: 0;
@@ -54,11 +70,7 @@ nav {
     width: 100%;
     border-bottom: 1px solid #ccc;
     background-color: #ffffff;
-    padding: 10px;
-}
-
-.layout-center h1{
-    width: 100%;
+    justify-items: center;
 }
 
 .construction{
