--- a/css/nav.css
+++ b/css/nav.css
@@ -114,7 +114,11 @@ nav {
 
     .menu_f a{
         width: auto;
-        height: 80px;
+        height: 100%;
+    }
+
+    nav{
+        height: 150px;
     }
 
     .logo{
