--- a/css/nav.css
+++ b/css/nav.css
@@ -16,12 +16,29 @@ h1{
     height: 100%;
 }
 
+.menubutton{
+    height: 90%;
+    padding: 0;
+    border: 0;
+    display: none;
+}
+
+.menubutton img{
+    height: 100%;
+}
+
+#hover{
+    display: none;
+}
+
 .menu_link {
     width: 100%;
+    height: 100%;
     color: #000000;
     text-decoration: none;
     font-size: 25px;
     font-weight: bolder;
+    line-height: 80px;
 }
 
 .menu_item:hover {
@@ -88,13 +105,10 @@ nav {
         display: none;
     }
 
-    .menu_f {
-        justify-content: center;
-    }
-
-    .menu_f a{
-        width: auto;
-        height: 80px;
+    .menubutton{
+        position: absolute;
+        display: block;
+        right: 5px;
     }
 
     .logo{
@@ -108,17 +122,14 @@ nav {
         display: none;
     }
 
-    .menu_f {
-        justify-content: center;
-    }
-
-    .menu_f a{
-        width: auto;
-        height: 100%;
-    }
-
     nav{
         height: 150px;
+    }
+
+    .menubutton{
+        position: absolute;
+        display: block;
+        right: 5px;
     }
 
     .logo{
