--- a/css/nav.css
+++ b/css/nav.css
@@ -107,14 +107,14 @@ nav {
 
 .menu_name_div{
     width: 440px;
-    border-bottom: 2px solid #000000;
+    border-bottom: 5px solid #000000;
     position: absolute;
     top: 0;
     margin: 20px 30px 10px 30px;
 }
 
 .menu_name{
-    width: 490px;
+    width: 100%;
     height: 40px;
     font-size: 30px;
     font-weight: bolder;
@@ -133,19 +133,21 @@ nav {
 }
 
 .menulink{
-    width: 440px;
+    width: 100%;
     padding:5px 0 5px 0;
 }
 
 .menulink a{
-    width: 440px;
+    width: 100%;
     display: block;
     font-size: 35px;
     text-decoration: none;
     color: #000000;
+    border-left: 2px solid #000000;
+    border-bottom: 2px solid #000000;
 }
 
-.menulink:hover{
+.menulink a:hover{
     background-color: #9f9f9fd0;
 }
 
@@ -154,7 +156,7 @@ nav {
     height: 45px;
     position: absolute;
     bottom: 0px;
-    border-top: 2px solid #000000;
+    border-top: 5px solid #000000;
     margin: 10px 30px 20px 30px;
 }
 
@@ -172,8 +174,6 @@ nav {
     .menu{
         margin-left: 10%;
     }
-
-    
 }
 
 @media (max-width:800px){
@@ -219,5 +219,41 @@ nav {
     .logo{
         width: auto;
         height:100%;
+    }
+
+    .phone_mode_menu{
+        width: 650px;
+    }
+
+    .menu_name_div{
+        width: 590px;
+    }
+
+    .menu_name{
+        height: 120px;
+        font-size: 100px;
+    }
+
+    .links{
+        width: 590px;
+        height: calc(100% - 310px);
+        margin: 152px 30px 0 30px;
+    }
+
+    .menulink{
+        padding:10px 0 10px 0;
+    }
+
+    .menulink a{
+        font-size: 90px;
+    }
+
+    .closer{
+        width: 590px;
+        height: 125px;
+    }
+
+    #menu_closer{
+        font-size: 80px;
     }
 }
