--- a/css/news.css
+++ b/css/news.css
@@ -8,6 +8,7 @@
 
 .event_news{
     width: 100%;
+    margin-top: 35px;
 }
 
 .event_title{
@@ -16,6 +17,7 @@
     font-family: 'Microsoft JhengHei';
     padding-left: 10px;
     border-left: 10px solid #000000;
+    margin-top: 0;
 }
 
 .event_news img{
@@ -26,4 +28,38 @@
     font-size: 20px;
     font-family: 'Microsoft JhengHei';
     text-indent: 2em;
+}
+
+.detail{
+    width: 100%;
+    border: 2px solid #ff8808;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.detail a{
+    width: 100%;
+    color: #ff8808;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Microsoft JhengHei';
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+}
+
+.detail a:hover{
+    color: #ffffff;
+    background-color: #ff8808;
+}
+
+iframe{
+    margin-bottom: 20px;
+}
+
+.news_link{
+    width: 100%;
+    margin-top: 35px;
 }
