--- a/css/characters.css
+++ b/css/characters.css
@@ -105,6 +105,7 @@ hr{
     text-decoration: none;
     color: #000000;
     font-size: 20px;
+    font-family: 'Microsoft JhengHei';
 }
 
 .character a:hover{
