--- a/css/music.css
+++ b/css/music.css
@@ -29,7 +29,7 @@ body{
     height: 50px;
 }
 
-.cover{
+#song_img{
     height: 100%;
     position: relative;
     z-index: 0;
@@ -48,7 +48,7 @@ body{
     margin: auto auto auto 2%;
 }
 
-.name{
+#name{
     color: #ffffff;
     font-size: xx-large;
     margin: 20px auto;
@@ -66,6 +66,8 @@ body{
     padding: 0;
     border: 0;
     margin-left: 1%;
+    margin-top: 5px;
+    margin-bottom: 5px;
     outline: none;
 }
 
@@ -76,9 +78,10 @@ body{
 }
 
 #play_path{
-    stroke-width: 5px;
+    stroke-width: 3px;
     stroke-linecap: round;
     outline: none;
+    fill: #ffffff;
 }
 
 #play:hover #play_path{
@@ -92,11 +95,27 @@ body{
 }
 
 #pause_path{
-    stroke-width: 5px;
+    stroke-width: 3px;
     stroke-linecap: round;
     outline: none;
 }
 
 #pause:hover #pause_path{
+    stroke: #ff8808;
+}
+
+#next{
+    width: 100%;
+    height: 100%;
+    outline: none;
+}
+
+#next_path{
+    stroke-width: 3px;
+    stroke-linecap: round;
+    outline: none;
+}
+
+#next:hover #next_path{
     stroke: #ff8808;
 }
